package app.producers;


public class CapProducer implements Producer {

    @Override
    public String name(){
        return "Smart caps";
    }
}