package app.producers;


public class TshirtProducer implements Producer {

    @Override
    public String name(){
        return "Active sports";
    }
}